# cook_fastapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
cook/: app.py  main.py
cook/api/: urls.py
cook/apps/internal/: routes.py
cook/config/: logs.py  settings.py  setup.py
docker/: Dockerfile  example.env
requirements/: base.txt  dev.txt
scripts/: run.sh
tests/: conftest.py
tests/e2e/: test_internal_api.py
