[project]
name = "cook"
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.8"

[tool.pytest.ini_options]
pythonpath = "cook"
testpaths = "tests"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "N", "S", "C", "B", "D"]
ignore = ["B008", "D100", "D104", "D107"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
